--- a/styles/position-page.css
+++ b/styles/position-page.css
@@ -1,1 +1,57 @@
+* {
+    box-sizing: border-box;
+}
 
+nav {
+    padding-top: 10px;
+    padding-left: 60px;
+    padding-right: 60px;
+    text-align: left;
+    height: 50px;
+    position: relative;
+    background: grey;
+}
+
+.logo {
+    position: fixed;
+    border-radius: 50%;
+    border: 1px solid black;
+    height: 30px;
+    left: 10px;
+}
+
+body {
+    background: url(../images/outerspace_landscape.jpeg) no-repeat;
+    background-size: cover;
+}
+
+.container {
+    width: 600px;
+    height: 300px;
+    border: 20px green dotted;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 150px;
+    position: relative;
+}
+
+.cat,
+.dog {
+    position: absolute;
+    width: 200px;
+}
+
+.cat {
+    top: 90px;
+    left: 250px;
+}
+
+.dog {
+    bottom: 120px;
+    right: 250px;
+}
+
+.Home,
+.display {
+    border left: 1px solid black;
+}
