--- a/styles/position-page.css
+++ b/styles/position-page.css
@@ -12,6 +12,24 @@ nav {
     background: grey;
 }
 
+nav ul {
+    display: inline-block;
+    list-style: none;
+}
+
+nav li {
+    display: inline-block;
+}
+
+nav li::after {
+    content: "|";
+    margin-left: 5px;
+}
+
+nav a:hover {
+    color: black;
+}
+
 .logo {
     position: fixed;
     border-radius: 50%;
