--- a/styles/float-page.css
+++ b/styles/float-page.css
@@ -1,12 +1,24 @@
 body {
-  background-color: black;
-  color: white;
+    background-color: black;
+    color: white;
 }
 
 main {
-  padding-left: 90px;
-  padding-right: 90px;
-  max-width: 1000px;
-  margin-left: auto;
-  margin-right: auto;
+    padding-left: 90px;
+    padding-right: 90px;
+    max-width: 1000px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.nebula1 {
+    float: left;
+    width: 200px;
+    padding: 20px;
+}
+
+.nebula2 {
+    float: right;
+    width: 200px;
+    padding: 20px;
 }
